<resources>
    <string name="app_name">Pentago</string>
    <string name="play_button">Play!</string>
    <string name="profile_settings_button">Profile Settings</string>
    <string name="gameplay_stats_button">Gameplay Statistics</string>
    <string name="achievements_button">Achievements</string>
    <string name="how_to_play_button">How to Play</string>

    <string name="player_1_title">Player 1</string>
    <string name="player_2_title">Player 2</string>
    <string name="player_1_default_username">Player1</string>
    <string name="player_2_default_username">Player2</string>
    <string name="ai_player_name">AI</string>
    <string name="ai_player_title">AI Player</string>
    <string name="profile_settings_help">Tap on the profile icon or the marble colour icon to select a different profile picture or marble colour that will be displayed during the game.</string>
    <string name="help_button">Help</string>
    <string name="back_button">Back</string>
    <string name="return_to_main_menu_button">Exit to Main Menu</string>

    <string name="default_profile_pic">Default Profile Picture</string>
    <string name="tiger_profile_pic">Tiger</string>
    <string name="android_robot_profile_pic">Android</string>
    <string name="beach_profile_pic">Coastline</string>
    <string name="desert_profile_pic">Desert</string>
    <string name="giraffe_profile_pic">Giraffe</string>
    <string name="lion_profile_pic">Lion</string>
    <string name="mountain_profile_pic">Mountain</string>
    <string name="ostrich_profile_pic">Ostrich</string>
    <string name="tree_profile_pic">Sunset View</string>
    <string name="zebra_profile_pic">Zebra</string>

    <string name="versus_text">VS</string>
    <string name="player_turn_text">Player Turn Placeholder</string>
    <string name="game_state_help">Information</string>
    <string name="game_state_help_place_marble">Tap an empty cell to place your marble.</string>
    <string name="game_state_help_rotate_subgrid">Tap the subgrid you would like to rotate.</string>
    <string name="game_state_help_cw_aw">Tap one of the arrows to rotate the grid clockwise or anti-clockwise.</string>

    <string name="achievement_title">Achievement Title</string>
    <string name="achievement_desc">Achievement Description</string>
    <string name="achievement_date">Wed Jan 01 2025</string>
    <string name="achievement_earned">Earned</string>
    <string name="achievement_unearned">Unearned</string>

    <string name="human_opponent_button">Player vs Player</string>
    <string name="ai_opponent_button">Player vs AI</string>

    <string name="opponent_select_text">Select Opponent Type</string>

    <string name="achievement_select_text">Select a Player to View their Achievements</string>

    <string name="stats_select_text">Select a Player to View their Gameplay Statistics</string>

    <string name="game_description">Pentago is a board game in which two players place marbles on any one of four 3x3 grids on a board. In order to win, a player must have five of their own marbles aligned vertically, horizontally or diagonally across the four grids. After each marble placement, the player must rotate any one of the four grids either clockwise or anti-clockwise, adding an additional layer of strategy in comparison to similar games like Connect Four.</string>

    <string name="rule_one">1. A player must rotate a grid after placing a marble (exception being in the case described by rule 3).</string>

    <string name="rule_two">2. The game is won when a player manages to align five of their own marbles vertically, horizontally or diagonally.</string>

    <string name="rule_three">3. If a player places a marble and it results in an alignment of five for themselves, they are not required to rotate a grid and thus become the winner of the match.</string>

    <string name="rule_four">4. A game results in a draw if a the entire board gets filled without any of the players managing to align five of their marbles in a row.</string>

    <string name="rule_five">5. A game also results in a draw if, after a rotation, both players obtain an alignment of five of their own marbles simultaneously.</string>

    <string name="checkbox_earned_text">Earned</string>

</resources>