<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/play_button"
        android:layout_margin="10dp"
        android:textAllCaps="true"
        app:icon="@drawable/baseline_play_arrow_24"
        app:iconGravity="start"/>

    <Button
        android:id="@+id/profile_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_settings_button"
        android:layout_margin="10dp"
        android:textAllCaps="true"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="start"/>

    <Button
        android:id="@+id/gameplay_stats_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameplay_stats_button"
        android:layout_margin="10dp"
        android:textAllCaps="true"
        app:icon="@drawable/baseline_percent_24"
        app:iconGravity="start"/>

    <Button
        android:id="@+id/achievements_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievements_button"
        android:layout_margin="10dp"
        android:textAllCaps="true"
        app:icon="@drawable/baseline_stars_24"
        app:iconGravity="start"/>

    <Button
        android:id="@+id/how_to_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play_button"
        android:layout_margin="10dp"
        android:textAllCaps="true"
        app:icon="@drawable/baseline_question_mark_24"
        app:iconGravity="start"/>

</LinearLayout>