<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/achievement_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/achievement_icon"
                android:layout_width="100dp"
                android:layout_height="100dp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achievement_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achievement_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/achievement_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achievement_unearned"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"/>

            <TextView
                android:id="@+id/achievement_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achievement_date"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/achievement_linearlayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>