<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileSettings">

    <TextView
        android:id="@+id/player_1_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/player_1_profile_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/player_1_profile_title">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/default_avatar"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username:"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_1_title"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Marble Color:"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/player_2_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/player_1_profile_linear_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/player_2_profile_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/player_2_profile_title">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/default_avatar"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username:"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_2_title"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Marble Color:"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/player_1_profile_linear_layout"
        app:layout_constraintBottom_toTopOf="@id/player_2_profile_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/player_2_profile_linear_layout" />

    <TextView
        android:id="@+id/profile_setting_help_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_settings_help"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/player_2_profile_linear_layout"
        app:layout_constraintBottom_toTopOf="@id/help_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>